# two-generals

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  PROGRESS.json  README.md  flake.nix  run-tests.sh
.palace/: current_prompt.md  history.jsonl
benchmarks/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  requirements.txt  setup.sh  test-infrastructure.sh
benchmarks/baseline/: piper_baseline.json
benchmarks/scripts/: analyze.py  compare.py  config.sh  example_output.json  generate_dashboard.py  lan.sh  localhost.sh  perth.sh  run-all.sh  visualize.py
lean-adaptive-proofs/: AdaptiveBilateral.lean  README.md  lakefile.lean
lean4/: AdversarialScheduling.lean  AxiomMinimality.lean  BFT.lean  CommonKnowledge.lean  ExtremeLoss.lean  GraysModel.lean  LightweightTGP.lean  PROOF_SUMMARY.md  ProtocolVariants.lean  RecursiveProofs.lean  SUPPLEMENTARY_PROOFS.md  TwoGenerals.lean  lake-manifest.json  lakefile.lean
lean4/archived/: TwoGenerals_Proof.lean  TwoGenerals_ProofStapling.lean  TwoGenerals_Simple.lean
lean4/prototype/: bilateral_proof.py  bilateral_proof_v2.py
lean4/v2/: Bilateral.lean  Channel.lean  ChannelModels.lean  ChannelProof.lean  Dependencies.lean  Emergence.lean  Epistemic.lean  EpistemicProof.lean  Exhaustive.lean  FairExchange.lean  FairExchangeStandalone.lean  FinalSynthesis.lean  FloodingAnalysis.lean  Gray.lean  GrayCore.lean  GrayInterp.lean  HonestAnalysis.lean  LocalDecisionRule.lean  LocalDetect.lean  MinimalGraysModel.lean  MinimalTGP.lean  PLAN.md  ProofStapling.lean  Protocol.lean  Solution.lean  StaticAnalysis.lean  TGPMinimal.lean  Theseus.lean  lake-manifest.json  lakefile.toml
paper/: fair-exchange.aux  fair-exchange.out  fair-exchange.tex  main.aux  main.blg  main.out  main.tex  references.bib
paper/chapters/: 01-introduction.tex  02-model.tex  03-protocol.tex  04-bilateral.tex  05-epistemic.tex  06-fullsolve.tex  07-proofs.tex  08-theseus.tex  09-bft.tex  10-latency.tex  11-evaluation.tex  12-safety-critical.tex  13-related.tex  14-conclusion.tex  15-appendix-build.tex
python/: pyproject.toml  requirements-dev.txt  requirements.txt
python/.hypothesis/constants/: 36f8dc07ed7038e7  64069970920a0ae8  a25256c8149dce7f  b74874f1b84bf8a7  d19b50bf6c377ae2  d42c3db3fbba0827  e12498b4fa434f2b
python/tests/: __init__.py  benchmark_tgp_vs_tcp.py  simulation.py  test_bft.py  test_crypto.py  test_extreme_loss.py  test_theseus.py
python/tgp/: __init__.py  bft.py  cli.py  crypto.py  network.py  protocol.py  types.py
rust/: Cargo.toml
rust-adaptive-flooding/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TGP_UDP_PERFORMANCE_REPORT.md  TGP_UDP_SUMMARY.md
rust-adaptive-flooding/examples/: demo.rs  gb_test.rs  gigabit_test.rs  real_tgp_udp.rs  simple_test.rs  speed_test.rs
rust-adaptive-flooding/src/: flooder.rs  lib.rs  protocol.rs
rust/benches/: protocol_bench.rs
rust/src/: bft.rs  crypto.rs  error.rs  lib.rs  protocol.rs  types.rs
scripts/: build-wasm.sh
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: ACCESSIBILITY.md  ACCESSIBILITY_REPORT.md  API.md  DEPLOYMENT_TO_PRODUCTION.md  EXAMPLES.md  EXPLAINER_SPEC.md  MOBILE_RESPONSIVENESS_REPORT.md  NETWORK_SIMULATION.md  PERFORMANCE.md  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY.txt  index.html  package-lock.json  package.json  style.css  tsconfig.json  visualizer.js  vite.config.js
