[package]
name = "two-generals-wasm"
version = "0.1.0"
authors = ["Riff Labs <wings@riff.cc>"]
edition = "2021"
license = "AGPL-3.0"
description = "WASM bindings for Two Generals Protocol"
repository = "https://github.com/rifflabs/two-generals-public"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# For now, don't depend on the main crate (it uses tokio which doesn't work in WASM)
# Instead, this crate provides a standalone WASM simulation
# two-generals = { path = "../rust", default-features = false, features = ["no_std"] }
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
wasm-bindgen-futures = "0.4.39"
serde-wasm-bindgen = "0.6.3"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"

[dependencies.web-sys]
version = "0.3.66"
features = [
  "console",
  "Performance",
  "Window",
]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
